--- a/views/admin/booking/show_table_detail_booking.ejs
+++ b/views/admin/booking/show_table_detail_booking.ejs
@@ -6,8 +6,7 @@
   <div class="card-body">
     <div class="row">
       <div class="col-md-4">
-        <img src="https://admin-system-stay.herokuapp.com/<%= booking.payments.proofPayment %>" alt="image"
-          style="width: 100%; display: block;">
+        <img src="https://admin-system-stay.herokuapp.com/<%= booking.payments.proofPayment %>" alt="image" style="width: 100%; display: block" />
 
         <div class="row ml-1">
           <% if(booking.payments.status == 'Proses') {%>
@@ -41,9 +40,9 @@
             <tbody>
               <tr>
                 <td><%= booking.memberId.firstName %> <%= booking.memberId.lastName %></td>
-                <td>$ <%= booking.total %> </td>
-                <td><%= booking.payments.bankFrom %> </td>
-                <td><%= booking.itemId.title %> </td>
+                <td>Rp <%= booking.total %></td>
+                <td><%= booking.payments.bankFrom %></td>
+                <td><%= booking.itemId.title %></td>
               </tr>
             </tbody>
           </table>
